@@ -21,7 +21,10 @@ public class TerrainView extends DebugView {
 		
 		super.setPrimitiveBuffers(gridPrimitiveBuffer, terrainPrimitiveBuffer);
 		
-		renderer = null;
+		if (renderer != null) {
+			renderer.freeResources();
+			renderer = null;
+		}
 		
 	}
 		
@@ -34,13 +37,13 @@ public class TerrainView extends DebugView {
 
 		// define light source
 		
-		gl.glLightfv(GL.GL_LIGHT0, GL.GL_AMBIENT, 
+		gl.glLightfv(GL.GL_LIGHT0, GL.GL_AMBIENT,
 				new float[] {1.0f, 1.0f, 1.0f , 1.0f}, 0);
-		gl.glLightfv(GL.GL_LIGHT0, GL.GL_DIFFUSE, 
+		gl.glLightfv(GL.GL_LIGHT0, GL.GL_DIFFUSE,
 				new float[] {1.0f, 1.0f, 1.0f , 1.0f}, 0);
-		gl.glLightfv(GL.GL_LIGHT0, GL.GL_SPECULAR, 
+		gl.glLightfv(GL.GL_LIGHT0, GL.GL_SPECULAR,
 				new float[] {1.0f, 1.0f, 1.0f , 1.0f}, 0);
-		gl.glLightfv(GL.GL_LIGHT0, GL.GL_POSITION, 
+		gl.glLightfv(GL.GL_LIGHT0, GL.GL_POSITION,
 				new float[] {1.0f, 1.5f, -(-1.0f), 0.0f}, 0);
 		
 		gl.glEnable(GL.GL_LIGHT0);
